[package]
name = "rust_luokuangjia"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12"
qdrant-client = "1.0.89"
reqwest = "0.13.2"
llm = { version = "1.3.7", default-features = false, features = ["openai", "anthropic", "ollama", "deepseek", "xai", "phind", "google", "groq", "default-tls"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
jsonwebtoken = "9"
sha2 = "0.10"
hmac = "0.12"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "chrono", "uuid"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
fastrand = "2.3.0"
rand = "0.10.0"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.22.1"
base64 = "0.22"
tokio-stream = "0.1"
futures-core = "0.3"
