[package]
name = "wasm_sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Navigator", "Screen",
    "Headers", "Request", "RequestInit", "RequestMode",
    "Response", "ReadableStream", "ReadableStreamDefaultReader",
    "TextDecoder",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
